force-app/main/default/objects/Capability_Map__c/Capability_Map__c.object-meta.xml
<CustomObject>
    <label>Capability Map</label>
    <pluralLabel>Capability Maps</pluralLabel>
    <nameField>
        <label>Map Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Project-specific capability map linked to a Klient PSA project</description>
</CustomObject>