force-app/main/default/objects/Capability_Map__c/fields/Auto_Save_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Save_Enabled__c</fullName>
    <label>Auto Save Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>