force-app/main/default/objects/Capability_Map__c/fields/Krow_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow_Project__c</fullName>
    <label>Klient Project</label>
    <type>Lookup</type>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Capability Maps</relationshipLabel>
    <relationshipName>Capability_Maps</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <unique>true</unique>
</CustomField>