force-app/main/default/objects/Capability_Map__c/fields/L_Hours__c.field-meta.xml
<CustomField>
    <fullName>L_Hours__c</fullName>
    <label>L Hours</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>16</defaultValue>
    <description>Hours for L sized capabilities</description>
</CustomField>