force-app/main/default/objects/Capability_Map__c/fields/Last_Saved__c.field-meta.xml
<CustomField>
    <fullName>Last_Saved__c</fullName>
    <label>Last Saved</label>
    <type>DateTime</type>
</CustomField>