force-app/main/default/objects/Capability_Map__c/fields/M_Hours__c.field-meta.xml
<CustomField>
    <fullName>M_Hours__c</fullName>
    <label>M Hours</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>8</defaultValue>
    <description>Hours for M sized capabilities</description>
</CustomField>