force-app/main/default/objects/Capability_Map__c/fields/S_Hours__c.field-meta.xml
<CustomField>
    <fullName>S_Hours__c</fullName>
    <label>S Hours</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>4</defaultValue>
    <description>Hours for S sized capabilities</description>
</CustomField>