force-app/main/default/objects/Capability_Map__c/fields/XL_Hours__c.field-meta.xml
<CustomField>
    <fullName>XL_Hours__c</fullName>
    <label>XL Hours</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>32</defaultValue>
    <description>Hours for XL sized capabilities</description>
</CustomField>