force-app/main/default/objects/Capability_Map__c/fields/XS_Hours__c.field-meta.xml
<CustomField>
    <fullName>XS_Hours__c</fullName>
    <label>XS Hours</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>2</defaultValue>
    <description>Hours for XS sized capabilities</description>
</CustomField>