force-app/main/default/objects/Capability_Map__c/fields/XXL_Hours__c.field-meta.xml
<CustomField>
    <fullName>XXL_Hours__c</fullName>
    <label>XXL Hours</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>64</defaultValue>
    <description>Hours for XXL sized capabilities</description>
</CustomField>