force-app/main/default/objects/Capability_Map__c/fields/XXXL_Hours__c.field-meta.xml
<CustomField>
    <fullName>XXXL_Hours__c</fullName>
    <label>XXXL Hours</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>128</defaultValue>
    <description>Hours for XXXL sized capabilities</description>
</CustomField>